--- a/static/scss/_font.scss
+++ b/static/scss/_font.scss
@@ -1,11 +1,6 @@
-@font-face {
-  font-family: mplus-2p-regular;
-  src: url("http://mplus-fonts.sourceforge.jp/webfonts/mplus-2p-regular.ttf") format("truetype");
-}
-
 body, h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
-  font-family: Helvetica, mplus-2p-regular;
-  text-shadow: 0px 0px 1px rgba(150, 150, 150, 0.4);
+  font-family:"游ゴシック体", "Yu Gothic", YuGothic, _sans_selif;
+  text-shadow:0px 0px 1px rgba(150,150,150,.1);
 }
 
 @font-face {
