--- a/static/scss/_variable.scss
+++ b/static/scss/_variable.scss
@@ -1,5 +1,6 @@
 $experimental-support-for-svg: true;
 
+$color_font: #564826;
 $color_base: #f7f2d3;
 $color_main: #242B3B;
 $color_second1: #616D87;
