--- a/static/scss/_bootstrap-theme.scss
+++ b/static/scss/_bootstrap-theme.scss
@@ -180,8 +180,10 @@
 
 .thumbnail,
 .img-thumbnail {
-  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.075);
-          box-shadow: 0 1px 2px rgba(0, 0, 0, 0.075);
+  -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+          border: none;
+          border-radius: 0;
 }
 
 .dropdown-menu > li > a:hover,
