--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -738,7 +738,7 @@ section div.row {
 }
 
 #TREATMENT h1 {
-  background-image: url(../images/IMG_3215.png);
+  background-image: url(../images/IMG_3215_1.jpg);
 }
 
 #FACIAL h1 {
